packages/yew-router-macro/tests/routable_derive/invalid-not-found-fail.stderr
error: only one `#[bind(not_found)]` can be present
  --> $DIR/invalid-not-found-fail.rs:14:5
   |
14 | /     #[bind(not_found)]
15 | |     #[bind(not_found)]
   | |______________________^

error[E0277]: the trait bound `RoutesOne: Clone` is not satisfied
  --> $DIR/invalid-not-found-fail.rs:1:28
   |
1  | #[derive(Debug, PartialEq, yew_router::Routable)]
   |                            ^^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `RoutesOne`
   |
  ::: $WORKSPACE/packages/yew-router/src/routable.rs
   |
   | pub trait Routable: Sized + Clone {
   |                             ----- required by this bound in `Routable`
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
